Change purl to w3id and update contexts.

--- a/specs/source/payment-links/index.html
+++ b/specs/source/payment-links/index.html
@@ -295,7 +295,7 @@ The monetary medium of exchange associated with the <tref>amount</tref>. This
 value SHOULD be either an ISO 4217 3 letter currency code, such as
 <code>USD</code>, or an IRI pointing to a human and machine-readable 
 description of the currency, such as 
-<code>http://purl.org/currencies/bitcoin</code>.
+<code>https://w3id.org/currencies/bitcoin</code>.
         </dd>
         <dt><tdef>description</tdef></dt>
         <dd>
