--- a/specs/source/vocabs/commerce.html
+++ b/specs/source/vocabs/commerce.html
@@ -111,7 +111,7 @@ former. You have been warned.
     <section>
       <h2>Classes</h2>
 
-      <section id="Account" about="http://purl.org/commerce#Deposit"
+      <section id="Account" about="https://w3id.org/commerce#Deposit"
         typeof="rdfs:Class">
         <h3>Account</h3>
           <p>
@@ -142,7 +142,7 @@ The following example expresses an account belonging to a person named
       </section>
 
 
-      <section id="Deposit" about="http://purl.org/commerce#Deposit"
+      <section id="Deposit" about="https://w3id.org/commerce#Deposit"
         typeof="rdfs:Class">
         <h3>Deposit</h3>
           <p>
@@ -153,7 +153,7 @@ performed as a means for storing monetary amounts in the destination account.
             <dt>Status</dt>
             <dd property="vs:term_status">unstable</dd>
             <dt>Parent Class</dt>
-            <dd><a href="http://purl.org/commerce#Transaction">com:Transaction</a></dd>
+            <dd><a href="https://w3id.org/commerce#Transaction">com:Transaction</a></dd>
             <dt>Properties</dt>
             <dd>com:date, com:source, com:payee, com:transfer, sec:signature</dd>
           </dl>
@@ -199,7 +199,7 @@ The following example describes a deposit made using a debit card:
         </pre>
       </section>
 
-      <section id="Payee" about="http://purl.org/commerce#Payee"
+      <section id="Payee" about="https://w3id.org/commerce#Payee"
         typeof="rdfs:Class">
         <h3>Payee</h3>
           <p>
@@ -231,7 +231,7 @@ The following example expresses a flat payment of $0.05 USD.
 </pre>
       </section>
 
-      <section id="PayeeRule" about="http://purl.org/commerce#PayeeRule"
+      <section id="PayeeRule" about="https://w3id.org/commerce#PayeeRule"
         typeof="rdfs:Class">
         <h3>PayeeRule</h3>
           <p>
@@ -288,7 +288,7 @@ added to the list of payees for a transaction.
           </pre>
       </section>
 
-      <section id="Transfer" about="http://purl.org/commerce#Transfer"
+      <section id="Transfer" about="https://w3id.org/commerce#Transfer"
         typeof="rdfs:Class">
         <h3>Transfer</h3>
           <p>
@@ -321,7 +321,7 @@ local financial account to an external financial account.
           </pre>
       </section>
 
-      <section id="Transaction" about="http://purl.org/commerce#Transaction"
+      <section id="Transaction" about="https://w3id.org/commerce#Transaction"
         typeof="rdfs:Class">
         <h3>Transaction</h3>
           <p>
@@ -358,7 +358,7 @@ to a tax account.
           </pre>
       </section>
 
-      <section id="Withdrawal" about="http://purl.org/commerce#Withdrawal"
+      <section id="Withdrawal" about="https://w3id.org/commerce#Withdrawal"
         typeof="rdfs:Class">
         <h3>Withdrawal</h3>
           <p>
@@ -405,7 +405,7 @@ bank account information.
     <section>
       <h2>Constants</h2>
 
-      <section id="Cumulative" about="http://purl.org/commerce#Cumulative"
+      <section id="Cumulative" about="https://w3id.org/commerce#Cumulative"
         typeof="rdf:Property">
         <h3>Cumulative</h3>
         <p>
@@ -441,7 +441,7 @@ The following example demonstrates how a cumulative rate type is specified:
         </pre>
       </section>
 
-      <section id="Deferred" about="http://purl.org/commerce#Deferred"
+      <section id="Deferred" about="https://w3id.org/commerce#Deferred"
         typeof="rdf:Property">
         <h3>Deferred</h3>
         <p>
@@ -474,7 +474,7 @@ The following example demonstrates how a deferred rate context can be specified:
         </pre>
       </section>
 
-      <section id="ExclusivePercentage" about="http://purl.org/commerce#ExclusivePercentage"
+      <section id="ExclusivePercentage" about="https://w3id.org/commerce#ExclusivePercentage"
         typeof="rdf:Property">
         <h3>ExclusivePercentage</h3>
         <p>
@@ -509,7 +509,7 @@ The following example demonstrates how an exclusive percentage can be specified:
         </pre>
       </section>
 
-      <section id="FlatAmount" about="http://purl.org/commerce#FlatAmount"
+      <section id="FlatAmount" about="https://w3id.org/commerce#FlatAmount"
         typeof="rdf:Property">
         <h3>FlatAmount</h3>
         <p>
@@ -539,7 +539,7 @@ Payee.
         </pre>
       </section>
 
-      <section id="InclusivePercentage" about="http://purl.org/commerce#InclusivePercentage"
+      <section id="InclusivePercentage" about="https://w3id.org/commerce#InclusivePercentage"
         typeof="rdf:Property">
         <h3>InclusivePercentage</h3>
         <p>
@@ -575,7 +575,7 @@ The following example describes an inclusive percentage.
         </pre>
       </section>
 
-      <section id="Tax" about="http://purl.org/commerce#Tax"
+      <section id="Tax" about="https://w3id.org/commerce#Tax"
         typeof="rdf:Property">
         <h3>Tax</h3>
         <p>
@@ -604,7 +604,7 @@ Virginia of 5%.
         </pre>
       </section>
 
-      <section id="TaxExempt" about="http://purl.org/commerce#TaxExempt"
+      <section id="TaxExempt" about="https://w3id.org/commerce#TaxExempt"
         typeof="rdf:Property">
         <h3>TaxExempt</h3>
         <p>
@@ -640,7 +640,7 @@ for the amount of $5.00 USD.
     <section>
       <h2>Properties</h2>
 
-      <section id="account" about="http://purl.org/commerce#account"
+      <section id="account" about="https://w3id.org/commerce#account"
         typeof="rdf:Property">
         <h3>account</h3>
         <p>
@@ -674,7 +674,7 @@ The following example demonstrates the proper use of the com:account property:
         </pre>
       </section>
 
-      <section id="amount" about="http://purl.org/commerce#amount"
+      <section id="amount" about="https://w3id.org/commerce#amount"
         typeof="rdf:Property">
         <h3>amount</h3>
         <p>
@@ -705,7 +705,7 @@ The following example shows the use of the amount property in a Transfer.
         </pre>
       </section>
 
-      <section id="currency" about="http://purl.org/commerce#currency"
+      <section id="currency" about="https://w3id.org/commerce#currency"
         typeof="rdf:Property">
         <h3>currency</h3>
         <p>
@@ -739,7 +739,7 @@ Transfer:
         </pre>
       </section>
 
-      <section id="date" about="http://purl.org/commerce#date"
+      <section id="date" about="https://w3id.org/commerce#date"
         typeof="rdf:Property">
         <h3>date</h3>
         <p>
@@ -772,7 +772,7 @@ The example below states that the Transaction occurred on October 16th, 2010 at
         </pre>
       </section>
 
-      <section id="destination" about="http://purl.org/commerce#destination"
+      <section id="destination" about="https://w3id.org/commerce#destination"
         typeof="rdf:Property">
         <h3>destination</h3>
         <p>
@@ -804,7 +804,7 @@ placed into the destination account identified by
         </pre>
       </section>
 
-      <section id="destinationOwnerType" about="http://purl.org/commerce#destinationOwnerType"
+      <section id="destinationOwnerType" about="https://w3id.org/commerce#destinationOwnerType"
         typeof="rdf:Property">
         <h3>destinationOwnerType</h3>
         <p>
@@ -834,7 +834,7 @@ can charge is 10%.
         </pre>
       </section>
 
-      <section id="gatewayApprovalCode" about="http://purl.org/commerce#gatewayApprovalCode"
+      <section id="gatewayApprovalCode" about="https://w3id.org/commerce#gatewayApprovalCode"
         typeof="rdf:Property">
         <h3>gatewayApprovalCode</h3>
         <p>
@@ -894,7 +894,7 @@ approval code of <code>8FGk9347Bo2N83</code>.
         </pre>
       </section>
 
-      <section id="gatewayError" about="http://purl.org/commerce#gatewayError"
+      <section id="gatewayError" about="https://w3id.org/commerce#gatewayError"
         typeof="rdf:Property">
         <h3>gatewayError</h3>
         <p>
@@ -954,7 +954,7 @@ the reason in the gateway error code:
         </pre>
       </section>
 
-      <section id="maximumRate" about="http://purl.org/commerce#maximumRate"
+      <section id="maximumRate" about="https://w3id.org/commerce#maximumRate"
         typeof="rdf:Property">
         <h3>maximumRate</h3>
         <p>
@@ -987,7 +987,7 @@ PaySwarm Authority can collect in fees to 10% of the final price:
         </pre>
       </section>
 
-      <section id="forTransaction" about="http://purl.org/commerce#forTransaction"
+      <section id="forTransaction" about="https://w3id.org/commerce#forTransaction"
         typeof="rdf:Property">
         <h3>forTransaction</h3>
         <p>
@@ -1022,7 +1022,7 @@ identified by
         </pre>
       </section>
 
-      <section id="limitation" about="http://purl.org/commerce#limitation"
+      <section id="limitation" about="https://w3id.org/commerce#limitation"
         typeof="rdf:Property">
         <h3>limitation</h3>
         <p>
@@ -1056,7 +1056,7 @@ want their content to be sold through affiliate relationships:
         </pre>
       </section>
 
-      <section id="minimumAmount" about="http://purl.org/commerce#minimumAmount"
+      <section id="minimumAmount" about="https://w3id.org/commerce#minimumAmount"
         typeof="rdf:Property">
         <h3>minimumAmount</h3>
         <p>
@@ -1091,7 +1091,7 @@ the final amount of the transaction, whichever is higher.
         </pre>
       </section>
 
-      <section id="payeePosition" about="http://purl.org/commerce#payeePosition"
+      <section id="payeePosition" about="https://w3id.org/commerce#payeePosition"
         typeof="rdf:Property">
         <h3>payeePosition</h3>
         <p>
@@ -1125,7 +1125,7 @@ be processed in the 4th position:
         </pre>
       </section>
 
-      <section id="paymentGateway" about="http://purl.org/commerce#paymentGateway"
+      <section id="paymentGateway" about="https://w3id.org/commerce#paymentGateway"
         typeof="rdf:Property">
         <h3>paymentGateway</h3>
         <p>
@@ -1186,7 +1186,7 @@ The example below expresses that the payment gateway is CyberSource:
         </pre>
       </section>
 
-      <section id="payee" about="http://purl.org/commerce#payee"
+      <section id="payee" about="https://w3id.org/commerce#payee"
         typeof="rdf:Property">
         <h3>payee</h3>
         <p>
@@ -1235,12 +1235,12 @@ The example below shows the sale listing for an electronic book called
          "@type": "com:PayeeRule",
          "ps:limitation": "ps:NoAdditionalPayees"
     }],
-    "ps:signature": [<a href="http://purl.org/signature#Signature">Signature</a>*]
+    "ps:signature": [<a href="https://w3id.org/security#Signature">Signature</a>*]
 }
         </pre>
       </section>
 
-      <section id="rate" about="http://purl.org/commerce#rate"
+      <section id="rate" about="https://w3id.org/commerce#rate"
         typeof="rdf:Property">
         <h3>rate</h3>
         <p>
@@ -1287,7 +1287,7 @@ example below specifies a 4% Virginia sales tax:
         </pre>
       </section>
 
-      <section id="rateContext" about="http://purl.org/commerce#rateContext"
+      <section id="rateContext" about="https://w3id.org/commerce#rateContext"
         typeof="rdf:Property">
         <h3>rateContext</h3>
         <p>
@@ -1320,7 +1320,7 @@ Virginia sales tax of 5% should be collected:
         </pre>
       </section>
 
-      <section id="rateType" about="http://purl.org/commerce#rateType"
+      <section id="rateType" about="https://w3id.org/commerce#rateType"
         typeof="rdf:Property">
         <h3>rateType</h3>
         <p>
@@ -1353,7 +1353,7 @@ The example below specifies an exclusive percentage rate type
         </pre>
       </section>
 
-      <section id="source" about="http://purl.org/commerce#source"
+      <section id="source" about="https://w3id.org/commerce#source"
         typeof="rdf:Property">
         <h3>source</h3>
         <p>
@@ -1410,7 +1410,7 @@ The example below shows a source being expressed as a debit card.
         </pre>
       </section>
 
-      <section id="transfer" about="http://purl.org/commerce#transfer"
+      <section id="transfer" about="https://w3id.org/commerce#transfer"
         typeof="rdf:Property">
         <h3>transfer</h3>
         <p>
