--- a/specs/source/vocabs/creditcard.html
+++ b/specs/source/vocabs/creditcard.html
@@ -93,7 +93,7 @@
 
     <section>
       <h2>Classes</h2>
-      <section id="" about="http://purl.org/commerce/creditcard#"
+      <section id="" about="https://w3id.org/commerce/creditcard#"
         typeof="owl:">
         <h3>CreditCard</h3>
         <p>The example below shows a typical Credit Card transaction</p>
@@ -121,7 +121,7 @@
 }
       </pre>
       </section>
-      <section id="" about="http://purl.org/commerce/creditcard#"
+      <section id="" about="https://w3id.org/commerce/creditcard#"
         typeof="owl:">
         <h3>DebitCard</h3>
       </section>
@@ -129,7 +129,7 @@
 
     <section>
       <h2>Properties</h2>
-      <section id="" about="http://purl.org/commerce/creditcard#"
+      <section id="" about="https://w3id.org/commerce/creditcard#"
         typeof="owl:">
         <h3>brand</h3>
         <p>
@@ -137,27 +137,27 @@ Valid values include, but are not limited to: "Visa", "MasterCard", or
 "Discover".
         </p>
       </section>
-      <section id="" about="http://purl.org/commerce/creditcard#"
+      <section id="" about="https://w3id.org/commerce/creditcard#"
         typeof="owl:">
         <h3>expirationMonth</h3>
       </section>
-      <section id="" about="http://purl.org/commerce/creditcard#"
+      <section id="" about="https://w3id.org/commerce/creditcard#"
         typeof="owl:">
         <h3>expirationYear</h3>
       </section>
-      <section id="" about="http://purl.org/commerce/creditcard#"
+      <section id="" about="https://w3id.org/commerce/creditcard#"
         typeof="owl:">
         <h3>verificationCode</h3>
       </section>
-      <section id="" about="http://purl.org/commerce/creditcard#"
+      <section id="" about="https://w3id.org/commerce/creditcard#"
         typeof="owl:">
         <h3>name</h3>
       </section>
-      <section id="" about="http://purl.org/commerce/creditcard#"
+      <section id="" about="https://w3id.org/commerce/creditcard#"
         typeof="owl:">
         <h3>number</h3>
       </section>
-      <section id="" about="http://purl.org/commerce/creditcard#"
+      <section id="" about="https://w3id.org/commerce/creditcard#"
         typeof="owl:">
         <h3>address</h3>
       </section>
