--- a/specs/source/vocabs/payswarm.html
+++ b/specs/source/vocabs/payswarm.html
@@ -95,7 +95,7 @@ payment standard for the Web. This vocabulary is a part of the
 
     <section>
       <h2>Classes</h2>
-      <section id="Asset" about="http://purl.org/payswarm#Asset"
+      <section id="Asset" about="https://w3id.org/payswarm#Asset"
         typeof="rdf:Property">
         <h3>Asset</h3>
         <p>
@@ -146,7 +146,7 @@ that is verifiable by the receiving party.
 }
         </pre>
       </section>
-      <section id="Contract" about="http://purl.org/payswarm#Contract"
+      <section id="Contract" about="https://w3id.org/payswarm#Contract"
         typeof="rdf:Property">
         <h3>Contract</h3>
         <p>
@@ -294,7 +294,7 @@ Jane, who may now peruse the article.
 }
         </pre>
       </section>
-      <section id="Data" about="http://purl.org/payswarm#Data"
+      <section id="Data" about="https://w3id.org/payswarm#Data"
         typeof="rdf:Property">
         <h3>Data</h3>
         <p>
@@ -338,7 +338,7 @@ video with the title "Learning How Cells Divide" by John Doe.
 }
         </pre>
       </section>
-      <section id="License" about="http://purl.org/payswarm#License"
+      <section id="License" about="https://w3id.org/payswarm#License"
         typeof="rdf:Property">
         <h3>License</h3>
         <p>
@@ -373,7 +373,7 @@ The following example describes an overly-simplified personal use license.
 }
         </pre>
       </section>
-      <section id="Listing" about="http://purl.org/payswarm#Listing"
+      <section id="Listing" about="https://w3id.org/payswarm#Listing"
         typeof="rdf:Property">
         <h3>Listing</h3>
         <p>
@@ -440,7 +440,7 @@ maximum of 10% of the final sale price to cover their fees.
 }
         </pre>
       </section>
-      <section id="WebPage" about="http://purl.org/payswarm#WebPage"
+      <section id="WebPage" about="https://w3id.org/payswarm#WebPage"
         typeof="rdf:Property">
         <h3>WebPage</h3>
         <p>
@@ -490,7 +490,7 @@ was created by "Digital Bazaar, Inc.". The asset is valid from November 28th
 
     <section>
       <h2>Constants</h2>
-      <section id="NoAdditionalPayees" about="http://purl.org/payswarm#NoAdditionalPayees"
+      <section id="NoAdditionalPayees" about="https://w3id.org/payswarm#NoAdditionalPayees"
         typeof="rdf:Property">
         <h3>NoAdditionalPayees</h3>
         <p>
@@ -522,7 +522,7 @@ asset or service.
 
     <section>
       <h2>Properties</h2>
-      <section id="asset" about="http://purl.org/payswarm#asset"
+      <section id="asset" about="https://w3id.org/payswarm#asset"
         typeof="rdf:Property">
         <h3>asset</h3>
         <p>
@@ -578,7 +578,7 @@ of an <a href="#Asset">Asset</a> that was a part of the purchase.
 }
         </pre>
       </section>
-      <section id="assetAcquirer" about="http://purl.org/payswarm#assetAcquirer"
+      <section id="assetAcquirer" about="https://w3id.org/payswarm#assetAcquirer"
         typeof="rdf:Property">
         <h3>assetAcquirer</h3>
         <p>
@@ -614,7 +614,7 @@ a value of <code>https://payswarm.example.com/i/jane</code>.
 }
         </pre>
       </section>
-      <section id="assetHash" about="http://purl.org/payswarm#assetHash"
+      <section id="assetHash" about="https://w3id.org/payswarm#assetHash"
         typeof="rdf:Property">
         <h3>assetHash</h3>
         <p>
@@ -685,7 +685,7 @@ ps:Asset as well as the ps:assetHash.
 }
         </pre>
       </section>
-      <section id="assetProvider" about="http://purl.org/payswarm#assetProvider"
+      <section id="assetProvider" about="https://w3id.org/payswarm#assetProvider"
         typeof="rdf:Property">
         <h3>assetProvider</h3>
         <p>
@@ -750,7 +750,7 @@ with a value of <code>https://payswarm.example.com/i/bob</code>.
 }
         </pre>
       </section>
-      <section id="authority" about="http://purl.org/payswarm#authority"
+      <section id="authority" about="https://w3id.org/payswarm#authority"
         typeof="rdf:Property">
         <h3>authority</h3>
         <p>
@@ -792,7 +792,7 @@ the asset should be performed via the
 }
         </pre>
       </section>
-      <section id="contentUrl" about="http://purl.org/payswarm#contentUrl"
+      <section id="contentUrl" about="https://w3id.org/payswarm#contentUrl"
         typeof="rdf:Property">
         <h3>contentUrl</h3>
         <p>
@@ -836,7 +836,7 @@ as <code>https://example.org/articles/1</code>.
 }
         </pre>
       </section>
-      <section id="licenseTemplate" about="http://purl.org/payswarm#licenseTemplate"
+      <section id="licenseTemplate" about="https://w3id.org/payswarm#licenseTemplate"
         typeof="rdf:Property">
         <h3>licenseTemplate</h3>
         <p>
@@ -880,7 +880,7 @@ a set of license terms.
 }
         </pre>
       </section>
-      <section id="licenseTerms" about="http://purl.org/payswarm#licenseTerms"
+      <section id="licenseTerms" about="https://w3id.org/payswarm#licenseTerms"
         typeof="rdf:Property">
         <h3>licenseTerms</h3>
         <p>
@@ -917,7 +917,7 @@ of printed physical copies of a work to 5.
 }
         </pre>
       </section>
-      <section id="identityHash" about="http://purl.org/payswarm#identityHash"
+      <section id="identityHash" about="https://w3id.org/payswarm#identityHash"
         typeof="rdf:Property">
         <h3>identityHash</h3>
         <p>
@@ -1028,7 +1028,7 @@ resides.
 }
         </pre>
       </section>
-      <section id="license" about="http://purl.org/payswarm#license"
+      <section id="license" about="https://w3id.org/payswarm#license"
         typeof="rdf:Property">
         <h3>license</h3>
         <p>
@@ -1074,7 +1074,7 @@ in a completed contract.
 }
         </pre>
       </section>
-      <section id="licenseHash" about="http://purl.org/payswarm#licenseHash"
+      <section id="licenseHash" about="https://w3id.org/payswarm#licenseHash"
         typeof="rdf:Property">
         <h3>licenseHash</h3>
         <p>
@@ -1107,7 +1107,7 @@ license hash.
 }
         </pre>
       </section>
-      <section id="listing" about="http://purl.org/payswarm#listing"
+      <section id="listing" about="https://w3id.org/payswarm#listing"
         typeof="rdf:Property">
         <h3>listing</h3>
         <p>
@@ -1178,7 +1178,7 @@ contains the listing information.
 }
         </pre>
       </section>
-      <section id="listingHash" about="http://purl.org/payswarm#listingHash"
+      <section id="listingHash" about="https://w3id.org/payswarm#listingHash"
         typeof="rdf:Property">
         <h3>listingHash</h3>
         <p>
@@ -1214,7 +1214,7 @@ listing hash.
 }
         </pre>
       </section>
-      <section id="owner" about="http://purl.org/payswarm#owner"
+      <section id="owner" about="https://w3id.org/payswarm#owner"
         typeof="rdf:Property">
         <h3>owner</h3>
         <p>
@@ -1244,7 +1244,7 @@ to the identity <code>https://payswarm.example.com/i/bob</code>.
 }
         </pre>
       </section>
-      <section id="validFrom" about="http://purl.org/payswarm#validFrom"
+      <section id="validFrom" about="https://w3id.org/payswarm#validFrom"
         typeof="rdf:Property">
         <h3>validFrom</h3>
         <p>
@@ -1288,7 +1288,7 @@ at midnight on November 28th, 2010.
 }
         </pre>
       </section>
-      <section id="validUntil" about="http://purl.org/payswarm#validUntil"
+      <section id="validUntil" about="https://w3id.org/payswarm#validUntil"
         typeof="rdf:Property">
         <h3>validUntil</h3>
         <p>
