--- a/specs/source/vocabs/video.xhtml
+++ b/specs/source/vocabs/video.xhtml
@@ -79,7 +79,7 @@
       recording that are common to all types of media.</dd>
 
       <dt><a rel="owl:imports" href=
-      "http://purl.org/commerce#">commerce</a></dt>
+      "https://w3id.org/commerce#">commerce</a></dt>
 
       <dd>The Commerce Vocabulary is used for describing the financial costs
       of acquiring video recordings.</dd>
@@ -645,10 +645,10 @@
       </dd>
     </dl>
 
-    <dl about="http://purl.org/commerce#payment" typeof=
+    <dl about="https://w3id.org/commerce#payment" typeof=
     "owl:DatatypeProperty">
       <dt><a href=
-      "http://purl.org/commerce#payment">commerce:payment</a></dt>
+      "https://w3id.org/commerce#payment">commerce:payment</a></dt>
 
       <dd class="details">
         <table>
@@ -674,8 +674,8 @@
       </dd>
     </dl>
 
-    <dl about="http://purl.org/commerce#costs" typeof="owl:DatatypeProperty">
-      <dt><a href="http://purl.org/commerce#costs">commerce:costs</a></dt>
+    <dl about="https://w3id.org/commerce#costs" typeof="owl:DatatypeProperty">
+      <dt><a href="https://w3id.org/commerce#costs">commerce:costs</a></dt>
 
       <dd class="details">
         <table>
@@ -696,11 +696,11 @@
             <td class="detailtype">Datatype</td>
 
             <td class="datatype"><a href=
-            "http://purl.org/commerce#Price">commerce:Price</a> (containing
+            "https://w3id.org/commerce#Price">commerce:Price</a> (containing
             both <a href=
-            "http://purl.org/commerce#currency">commerce:currency</a> and
+            "https://w3id.org/commerce#currency">commerce:currency</a> and
             <a href=
-            "http://purl.org/commerce#amount">commerce:amount</a>)</td>
+            "https://w3id.org/commerce#amount">commerce:amount</a>)</td>
           </tr>
         </table>
       </dd>
