Updated site to load files from https-based locations.

--- a/index.xhtml
+++ b/index.xhtml
@@ -147,7 +147,7 @@ help build a better Web for all of us.</p>
 
 <div class="center">
 
-<object width="640" height="385"><param name="movie" value="http://www.youtube.com/v/gYdXZ3-U-oQ?fs=1&amp;hl=en_US"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/gYdXZ3-U-oQ?fs=1&amp;hl=en_US" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="640" height="385"></embed></object>
+<object width="640" height="385"><param name="movie" value="https://www.youtube.com/v/gYdXZ3-U-oQ?fs=1&amp;hl=en_US"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/gYdXZ3-U-oQ?fs=1&amp;hl=en_US" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="640" height="385"></embed></object>
 
 <!--
 <object width="860" height="510">
@@ -288,10 +288,10 @@ vocabularies, and related documentation.
 <div class="container vspacing"> 
   <div class="row"> 
     <div class="threecol"> 
-      <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a> 
+      <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a> 
     </div> 
     <div class="ninecol last"> 
-      <p>&copy; 2010-2011 Digital Bazaar, Inc. 
+      <p>&copy; 2010-2013 Digital Bazaar, Inc. 
 Website CSS created by <a href="http://cssgrid.net/">@andytlr</a> 
 and is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/au/">
 Creative Commons Attribution-ShareAlike 3.0 Australia License</a>. All other
